fixed news container width on mobile

--- a/css/index.scss
+++ b/css/index.scss
@@ -96,6 +96,6 @@ footer {
 // mobile
 @media (min-width: 320px) and (max-width: 480px) {
     .thumbnailContainer {
-        max-width: 390px;
+        width: 90%;
     }
 }
